<resources>
    <string name="app_name">Soup</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SOUP</string>
    <string name="nav_header_subtitle">Développé par Yacine Trousselle</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_player">Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_a_song">Search a song...</string>
    <string name="menu_result">Result</string>
    <string name="speaker">Speaker</string>
</resources>