<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.frcsbcn.soup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_result"
        android:name="fr.frcsbcn.soup.ui.search.ResultFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_result">
    </fragment>
    <action
        app:destination="@+id/nav_player"
        android:id="@+id/result_to_player"
        />

    <fragment
        android:id="@+id/nav_search"
        android:name="fr.frcsbcn.soup.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search">
    </fragment>
    <action
        android:id="@+id/search_to_result_fragment"
        app:destination="@+id/nav_result" />

    <fragment
        android:id="@+id/nav_upload"
        android:name="fr.frcsbcn.soup.ui.upload.UploadFragment"
        android:label="@string/menu_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/nav_player"
        android:name="fr.frcsbcn.soup.ui.player.PlayerFragment"
        android:label="@string/menu_player"
        tools:layout="@layout/fragment_player" />
</navigation>